// tag::header[]
[%autowidth.stretch]
|===
| *Date* | *Solution Area* | *Description of change*
// end::header[]
// tag::hmc[]
| 09/14/2022 | Hybrid Cloud | Added links to TCO calculators and simulators for FSxN / VMC and ANF / AVS
// end::hmc[]
// tag::hmc[]
| 09/14/2022 | Hybrid Cloud | Added supplemental NFS datastore option for AWS / VMC
// end::hmc[]
// tag::ent-db[]
| 08/25/2022 | Database | Added blog - Modernize your Oracle database operation in hybrid cloud with Amazon FSx storage
// end::ent-db[]
// tag::aiml[]
| 08/25/2022 | AI | New solution: NVIDIA AI Enterprise with NetApp and VMware
// end::aiml[]
// tag::hmc[]
| 08/23/2022 | Hybrid Cloud | Updated the latest region availability for all supplemental NFS datastore options
// end::hmc[]
// tag::vmware[]
| 08/05/2022 | Virtualization | Added "Reboot Required" information for recommended ESXi and ONTAP settings
// end::vmware[]
// tag::hmc[]
| 07/28/2022 | Hybrid Cloud | Added DR solution with SnapCenter and Veeam for AWS/VMC (guest connected storage)
// end::hmc[]
// tag::hmc[]
| 07/21/2022 | Hybrid Cloud | Added DR solution with CVO and JetStream for AVS (guest connected storage)
// end::hmc[]
// tag::ent-db[]
| 06/29/2022 | Database | Added WP-7357: Oracle Database Deployment on EC2/FSx Best Practices
// end::ent-db[]
// tag::aiml[]
| 06/16/2022 | AI |  Added NVIDIA DGX SuperPOD with NetApp design guide
// end::aiml[]
// tag::hmc[]
| 06/10/2022 | Hybrid Cloud | Added AVS with ANF native datastore overview and DR with JetStream
// end::hmc[]
// tag::hmc[]
| 06/07/2022 | Hybrid Cloud | Updated AVS region support to match public preview announcement / support
// end::hmc[]
// tag::aiml[]
| 06/07/2022 | Data Analytics | Added link to NetApp EF600 with Splunk Enterprise solution
// end::aiml[]
// tag::hmc[]
| 06/02/2022 | Hybrid Cloud | Added list of region availability for NFS datastores for NetApp Hybrid Multicloud with VMware
// end::hmc[]
// tag::aiml[]