@@ -1,7 +1,7 @@
 The availability of supplemental NFS datastores on AWS / VMC is defined by Amazon.  First, you need to determine if both VMC and FSxN are available in a specified region.  Next, you need to determine if the FSxN supplemental NFS datastore is supported in that region.
 
-* Check the availability of VMC link:https:docs.vmware.com/en/VMware-Cloud-on-AWS/services/com.vmware.vmc-aws.getting-started/GUID-19FB6A08-B1DA-4A6F-88A3-50ED445CFFCF.html[here].
-* Amazon's pricing guide offers information on where FSxN (FSx ONTAP) is available. You can find that information link:https:aws.amazon.com/fsx/netapp-ontap/pricing/[here].
+* Check the availability of VMC link:https://docs.vmware.com/en/VMware-Cloud-on-AWS/services/com.vmware.vmc-aws.getting-started/GUID-19FB6A08-B1DA-4A6F-88A3-50ED445CFFCF.html[here].
+* Amazon's pricing guide offers information on where FSxN (FSx ONTAP) is available. You can find that information link:https://aws.amazon.com/fsx/netapp-ontap/pricing/[here].
 * Availability of the FSxN supplemental NFS datastore for VMC is coming soon.
 
 While information is still being released, the following chart identifies the current support for VMC, FSxN and FSxN as a supplemental NFS datastore.
@@ -51,9 +51,9 @@ Last updated on: June 2, 2022.
 | Asia Pacific (Seoul) | Yes | Yes | Yes
 | Asia Pacific (Mumbai) | Yes | Yes | Yes
 | Asia Pacific (Jakarta) | No | No | No
-| Asia Pacific (Hong Kong) | No | Yes | No
+| Asia Pacific (Hong Kong) | Yes | Yes | Yes
 |===
 
-Last updated on: June 2, 2022.
+Last updated on: September 28, 2022.
 --
 ====
