@@ -19,11 +19,14 @@ indexpage:
         - title: "Disaster Recovery with VMC on AWS (guest connected)"
           url: /aws-guest-dr-solution-overview.html
 #
+    - title: "Workload Migration Solutions"
+      links:
+        - title: "Migrate Workloads to FSxN datastore using VMware HCX"
+          url: /aws-migrate-vmware-hcx.html
+#
     - title: "Coming Soon ..."
       links:
         - title: "Workload Extend Solutions"
-          url:
-        - title: "Workload Migrate Solutions"
           url:
 #
     - title: "Tools"
