@@ -1,0 +1,18 @@
+---
+sidebar: sidebar
+permalink: ehc/aws/aws-migrate-vmware.hcx.html
+keywords: aws, vmc, hybrid multicloud, migrate, vmware hcx, hcx
+summary:
+---
+
+= TR xxxx: Migrate Workloads to FSx ONTAP (FSxN) datastore using VMware HCX
+:hardbreaks:
+:nofooter:
+:icons: font
+:linkattrs:
+:imagesdir: ./../../media/
+
+[.lead]
+Author(s): Niyaz Mohamed, NetApp
+
+== Overview
