@@ -31,7 +31,7 @@ Browse the available solutions in the following sections.
 --
 .Migrate
 --
-COMING SOON!!
+* link:aws-migrate-vmware-hcx.html[Migrate Workloads to FSxN datastore using VMware HCX]
 --
 .Extend
 --
