@@ -21,11 +21,14 @@ indexpage:
         - title: "Disaster Recovery with ANF and CVO (guest connected storage)"
           url: /azure-guest-dr-cvo.html
 #
+    - title: "Workload Migration Solutions"
+      links:
+        - title: "Migrate Workloads to Azure NetApp Files datastore using VMware HCX"
+          url: /azure-migrate-vmware-hcx.html
+#
     - title: "Coming soon ..."
       links:
         - title: "Workload Extend Solutions"
-          url:
-        - title: "Workload Migrate Solutions"
           url:
 #
     - title: "Tools"
