@@ -1,0 +1,18 @@
+---
+sidebar: sidebar
+permalink: ehc/azure/azure-migrate-vmware.hcx.html
+keywords: azure, avs, hybrid multicloud, migrate, vmware hcx, hcx
+summary:
+---
+
+= TR xxxx: Migrate Workloads to Azure NetApp Files datastore using VMware HCX
+:hardbreaks:
+:nofooter:
+:icons: font
+:linkattrs:
+:imagesdir: ./../../media/
+
+[.lead]
+Author(s): Niyaz Mohamed, NetApp
+
+== Overview
