@@ -32,7 +32,7 @@ Browse the available solutions in the following sections.
 --
 .Migrate
 --
-COMING SOON!!
+* link:azure-migrate-vmware-hcx.html[Migrate Workloads to Azure NetApp Files datastore using VMware HCX]
 --
 .Extend
 --
