@@ -102,6 +102,10 @@ entries:
                     url: /ehc/aws/aws-guest-dr-failback.html
               - title: "Conclusion"
                 url: /ehc/aws/aws-guest-dr-conclusion.html
+      - title: "Migrating Workloads"
+        entries:
+          - title: "Migrating Workloads to Azure NetApp Files datastore using VMware HCX"
+            url: /ehc/aws/aws-migrate-vmware-hcx.html
       - title: "Region Support for NFS Datastores"
         url: /ehc/aws/aws-regions.html
 
@@ -114,6 +118,10 @@ entries:
             url: /ehc/azure/azure-native-dr-jetstream.html
           - title: "Disaster Recovery with ANF and CVO (guest connected storage)"
             url: /ehc/azure/azure-guest-dr-cvo.html
+      - title: "Migrating Workloads"
+        entries:
+          - title: "Migrate Workloads to FSxN datastore using VMware HCX"
+            url: /ehc/azure/azure-migrate-vmware-hcx.html
       - title: "Region Support for NFS Datastores"
         url: /ehc/azure/azure-regions.html
 
