@@ -4,6 +4,12 @@
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
 // tag::hmc[]
+| 09/30/2022 | Hybrid Cloud | Added solution for Migrating Workloads to FSxN datastore using VMware HCX
+// end::hmc[]
+// tag::hmc[]
+| 09/29/2022 | Hybrid Cloud | Added solution for Migrating Workloads to ANF datastore using VMware HCX
+// end::hmc[]
+// tag::hmc[]
 | 09/14/2022 | Hybrid Cloud | Added links to TCO calculators and simulators for FSxN / VMC and ANF / AVS
 // end::hmc[]
 // tag::hmc[]
